Initial commit: MoodMuse with animated share card and Lovable removed

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoodMuse — Emoji-Driven Mood Tracker</title>
-    <meta name="description" content="Track your moods with delightful emoji interactions" />
-    <meta name="author" content="CodeCircuit Hackathon" />
 
-    <meta property="og:title" content="MoodMuse — Emoji-Driven Mood Tracker" />
-    <meta property="og:description" content="Track your moods with delightful emoji interactions" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MoodMuse — Emoji-Driven Mood Tracker</title>
+  <meta name="description" content="Track your moods with delightful emoji interactions ✨" />
+  <meta name="author" content="CodeCircuit Hackathon" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://moodmuse.app/" />
+  <meta property="og:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
+  <meta property="og:description"
+    content="Transform your mood tracking into a colorful adventure with emojis! ✨ Track, reflect, and grow with MoodMuse." />
+  <meta property="og:image" content="https://moodmuse.app/og-image.gif" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
+  <meta name="twitter:description"
+    content="Transform your mood tracking into a colorful adventure with emojis! ✨ Track, reflect, and grow with MoodMuse." />
+  <meta name="twitter:image" content="https://moodmuse.app/og-image.gif" />
+  <meta name="twitter:image:alt" content="MoodMuse - Animated mood tracking experience" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
