--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
   <title>MoodMuse — Emoji-Driven Mood Tracker</title>
   <meta name="description" content="Track your moods with delightful emoji interactions ✨" />
   <meta name="author" content="CodeCircuit Hackathon" />
+  <meta property="og:image" content="/favicon.ico" />
 
   <!-- Open Graph / Facebook -->
+
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://moodmuse.app/" />
   <meta property="og:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
   <meta property="og:description"
     content="Transform your mood tracking into a colorful adventure with emojis! ✨ Track, reflect, and grow with MoodMuse." />
-  <meta property="og:image" content="https://moodmuse.app/og-image.gif" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
   <!-- Twitter -->
+  <meta name="twitter:image" content="/favicon.ico" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
   <meta name="twitter:description"
     content="Transform your mood tracking into a colorful adventure with emojis! ✨ Track, reflect, and grow with MoodMuse." />
-  <meta name="twitter:image" content="https://moodmuse.app/og-image.gif" />
   <meta name="twitter:image:alt" content="MoodMuse - Animated mood tracking experience" />
 </head>
 
