--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>MoodMuse — Emoji-Driven Mood Tracker</title>
   <meta name="description" content="Track your moods with delightful emoji interactions ✨" />
   <meta name="author" content="CodeCircuit Hackathon" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
+
   <meta property="og:image" content="/favicon.ico" />
 
   <!-- Open Graph / Facebook -->
