--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <meta name="author" content="CodeCircuit Hackathon" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="favicon.ico" />
 
-  <meta property="og:image" content="/favicon.ico" />
+  <meta property="og:image" content="favicon.ico" />
 
   <!-- Open Graph / Facebook -->
 
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://moodmuse.app/" />
+  <meta property="og:url" content="https://code-circuit-2.vercel.app/" />
   <meta property="og:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
   <meta property="og:description"
     content="Transform your mood tracking into a colorful adventure with emojis! ✨ Track, reflect, and grow with MoodMuse." />
@@ -26,7 +26,7 @@
   <meta property="og:image:height" content="630" />
 
   <!-- Twitter -->
-  <meta name="twitter:image" content="/favicon.ico" />
+  <meta name="twitter:image" content="favicon.ico" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MoodMuse — Your Daily Mood Journey 🎨" />
   <meta name="twitter:description"
@@ -36,8 +36,6 @@
 
 <body>
   <div id="root"></div>
-  <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
